[package]
name = "gerrymandering"
version = "0.1.0"
authors = ["Daniele D'Orazio <d.dorazio96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug=true

[dependencies]
colored = "2.0"

[dev-dependencies]
proptest = "0.10"
